# clauseiq

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  openai_plan.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: cli.py  config.py
app/db/: __init__.py  models.py  session.py
app/ingest/: classifier.py  embedder.py  intake.py  metadata.py  orchestrator.py  persistence.py  segmenter.py  taxonomy.py
app/ingest/extractors/: docx.py  pdf.py
app/search/: client.py  index_mapping.py
docs/: README.md  SMOKE_TEST.md  index.html
docs/architecture/: PrecedentIQ_MVP_Ingestion_Plan.md  PrecedentIQ_MVP_Plan_Consolidated.md
docs/decisions/: 0001-adopt-workbench-with-command-palette.md
docs/design/wireframes/: ClauseIQ_HiFi_v0.1.html  ClauseIQ_Prototype_v0.1.html  ClauseIQ_Prototype_v0.1_standalone.html  ClauseIQ_UI_Plan_v0.1.html  README.md
docs/design/wireframes/partials/: dir-a.html  dir-b.html  dir-c.html
docs/design/wireframes/proto/: app.jsx  data.jsx  palette.jsx  viewer.jsx
docs/research/: README.md
tests/: test_cli.py  test_config.py
tests/db/: test_models.py
tests/fixtures/: sample.docx
tests/ingest/: test_classifier.py  test_embedder.py  test_intake.py  test_metadata.py  test_orchestrator.py  test_persistence.py  test_segmenter.py
tests/ingest/extractors/: test_docx.py  test_pdf.py
tests/integration/: test_ingest_e2e.py
tests/search/: test_index_setup.py
